responsive layout bug fix

--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ body{
     font-family: 'Space Grotesk',sans-serif;
     background-color: #02010A;
     color: #e9ecef;
+    overflow: hidden;
 }
 
 h1{
@@ -107,8 +108,9 @@ h1{
         background-size: 400% 400%;
         animation: gradient 30s ease infinite;
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
     height: 100vh;
+    width: 100vw;
     justify-content: center;
         align-items: center;
 
@@ -127,13 +129,15 @@ h1{
     }
 }
 .main{
-    align-items: center;
-    justify-content: center;
+    /* align-items: center;
+    justify-content: center; */
+    display: flex;
+    flex-direction: column;
     padding: 2rem;
     width: 43rem;
 }
 .sentence{
-    height: 5rem;
+    min-height: 5rem;
 }
 h1,p{
     text-align: center;
@@ -150,8 +154,7 @@ h1,p{
     color: #fff;
 }
 .link__wrapper{
-    position: relative;
-        display: block;
+   text-align: center;
         padding: 20px 0;
 }
 .hover:after {
@@ -184,6 +187,9 @@ footer{
     color: #20C2F7;
     padding-right: 2rem;
     text-align: center;
+}
+.uit:hover{
+    color: #fff;
 }
 .social{
     text-align: center;
